Mon Jun  3 19:02:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (is_hfs): use the file descriptor instead of a path.

Mon Jun  3 07:15:17 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(readdir_r). readdir_r()
	  is only used from dir.c and it doesn't need readdir_r().
	* configure.in (SIZEOF_STRUCT_DIRENT_TOO_SMALL): remvoed. It is
	  only used for readdir_r.
	* dir.c: removes NAME_MAX_FOR_STRUCT_DIRENT. It is not right way
	  to detect maximum length of path len. POSIX require to use
	  fpathconf(). IOW, it might have lead to make a vulnerability
	  using stack smashing. Moreover, readdir() works enough for our
	  usage.
	* dir.c (READDIR): removes an implementation which uses
	  readdir_r() and parenthesize in a macro body correctly.
	* dir.c (dir_read): removes IF_HAVE_READDIR_R(DEFINE_STRUCT_DIRENT
	  entry), it is used only for readdir_r().
	* dir.c (dir_each): ditto.
	* dir.c (glob_helper): ditto.

	* dir.c (READDIR): removes entry and dp argument.
	* dir.c (dir_read): adjust for the above change.
	* dir.c (dir_each): ditto.
	* dir.c (glob_helper): ditto.

Mon Jun  3 03:40:29 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): partially revert r41019.
	  The code is not useless.

Mon Jun  3 01:25:25 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/socket/test_sockopt.rb: change test name. follow r41037.

Mon Jun  3 01:08:43 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* test/rinda/test_rinda.rb: rename functions introduced in r41009.

Sun Jun  2 23:33:42 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* enc/trans/japanese_euc.trans, test/ruby/test_transcode.rb,
	  tool/transcode-tblgen.rb: change EUC-JP-2004 to EUC-JIS-2004.
	  This is follow up to changes in r41024.

Sun Jun  2 22:44:42 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/option.c: rename functions introduced in r41009
	  s/ip/ipv4/g because they are ipv4 functions.